# verificar_clave

./: CMakeLists.txt  README.md  compilar.txt  desktops.c  desktops.h  log.h  main.c  notify_wrap.c  notify_wrap.h  opciones.c  opciones.h  pam_auth.c  pam_auth.h  verificar_clave.desktop
